--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
             <!--<scope>compile</scope>-->
         <!--</dependency>-->
 
-        <dependency>
+        <!-- <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.0</version>
@@ -36,7 +36,7 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.2</version>
-        </dependency>
+        </dependency> -->
 
         <!--<dependency>-->
         <!--<groupId>com.belerweb</groupId>-->
